<resources>
    <string name="app_name">DoNotSpeak</string>
    <string name="disable_alert_title">Enable Speaker?</string>
    <string name="disable_alert_menu_button">Show menu</string>
    <string name="disable_alert_menu_stop_app">Stop this app</string>
    <string name="disable_alert_menu_diagnostics_tool">Diagnostics Tool</string>
    <string name="disable_alert_menu_settings">Settings</string>
    <string name="disable_alert_menu_support_developer">Support Developer</string>
    <string name="disable_alert_menu_settings_not_supported_message">Bluetooth Settings is available for Android 6.0 or later.</string>
    <string name="disable_alert_period">a period:</string>
    <string name="disable_alert_period_minutes">Minutes</string>
    <string name="disable_alert_period_timeOfDay">Time of Day</string>
    <string name="disable_alert_message_for_minutes">Enable speaker for:</string>
    <string name="disable_alert_message_for_timesOfDay">Enable speaker until:</string>
    <string name="disable_alert_time_unit">min</string>
    <string name="disable_alert_restore_volume">Restore volume</string>
    <string name="disable_alert_request_to_stop_playback">Request to stop playback</string>
    <string name="disable_alert_keep_screen_on">Keep screen ON</string>
    <string name="disable_alert_okButton">Enable</string>
    <string name="disable_alert_cancelButton">Cancel</string>
    <string name="disable_alert_untilScreenOffButton">Until Screen Off</string>
    <string name="start_toast_text">Muted</string>
    <string name="stop_toast_text">Speak until %1$s</string>
    <string name="stop_until_screen_off">Speak until screen off</string>
    <string name="stopped">Stopped</string>
    <string name="notification_channel_name">Status</string>
    <string name="notification_action_untilScreenOff">Enable Until Screen Off</string>
    <string name="notification_subtext_enabled">Tap to show menu</string>
    <string name="notification_subtext_disabled">Tap to mute</string>
    <string name="notification_reboot_channel_name">Check Startup</string>
    <string name="notification_reboot_content_title">DoNotSpeak is not started</string>
    <string name="notification_reboot_content_text">DoNotSpeak has detected that it has been terminated by the OS. Please tap here to start it.</string>
    <string name="shortcut_enableSpeakerUntilScreenOff">Enable Speaker</string>
    <string name="shortcut_showMenu">Show Menu</string>
    <string name="shortcut_switch">Switch</string>
    <string name="shortcut_stop_this_app">Stop this app</string>
    <string name="tile_label">Disabling Speaker</string>
    <string name="tile_stop_text">Speak until %1$s</string>
    <string name="tile_stop_until_screen_off">Speak until screen off</string>
    <string name="tile_is_not_live">Unlimited</string>
    <string name="stop_app_alert_title">Stop this app?</string>
    <string name="stop_app_alert_message">If you stop this app, the volume will not be limited until you start the app again or restart your device.</string>
    <string name="stop_app_alert_ok">Stop this app</string>
    <string name="diagnostics_tool_title">Diagnostics Tool</string>
    <string name="diagnostics_tool_message">While this screen is open, the operation of the service will be logged.</string>
    <string name="diagnostics_tool_menu_send_mail">Send e-mail to developer</string>
    <string name="diagnostics_tool_menu_log_file">Always log to file</string>
    <string name="diagnostics_tool_mail_subject">DoNotSpeak Diagnostics Report</string>
    <string name="diagnostics_tool_mail_text">Please enter details of the problematic behavior:</string>
    <string name="diagnostics_tool_mail_title">Send an e-mail with the log as an attachment.</string>
    <string name="diagnostics_tool_mail_chooser_title">Select the mailer you want to use for sending.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_use_adjust_volume">Use Adjust Volume API</string>
    <string name="settings_use_adjust_volume_description">Workaround for ColorOS (OPPO / Realme device) limitation</string>
    <string name="settings_restore_volume_on_headphone_connect">Restore volume on headphone connect</string>
    <string name="settings_restore_volume_on_headphone_connect_description">Automatically restore volume level when headphones are connected. Use only when the OS does not automatically restore volume</string>
    <string name="settings_use_notification">Use Notification</string>
    <string name="settings_bluetooth_settings">Bluetooth Settings</string>
    <string name="settings_use_bluetooth">Use Bluetooth</string>
    <string name="settings_message">Select the device you want to treat as an earphone.</string>

    <string name="permission_dialog_bluetooth_title">Use Bluetooth earphones?</string>
    <string name="permission_dialog_bluetooth_message">When using Bluetooth earphones, you must allow to access the Bluetooth devices (Nearby Devices).</string>
    <string name="permission_dialog_bluetooth_positive">Use</string>
    <string name="permission_dialog_bluetooth_negative">Not use</string>
    <string name="permission_dialog_bluetooth_denied_title">Bluetooth permission denied</string>
    <string name="permission_dialog_bluetooth_denied_message">Bluetooth permission are denied. Please allow DoNotSpeak Bluetooth permission (Nearby Devices) from the system settings.</string>
    <string name="permission_dialog_bluetooth_denied_positive">Open Settings</string>
    <string name="permission_dialog_bluetooth_denied_negative">Not use Bluetooth</string>

    <string name="permission_dialog_notification_title">Use Notification？</string>
    <string name="permission_dialog_notification_message">If you want to use Notification, you must allow Notification permission.</string>
    <string name="permission_dialog_notification_positive">Use</string>
    <string name="permission_dialog_notification_negative">Not use</string>
    <string name="permission_dialog_notification_denied_title">Notification permission denied</string>
    <string name="permission_dialog_notification_denied_message">Notification permission are denied. Please allow DoNotSpeak Notification permission from the system settings.</string>
    <string name="permission_dialog_notification_denied_positive">Open Settings</string>
    <string name="permission_dialog_notification_denied_negative">Not use Notification</string>
</resources>
